# serious

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CopyFile.cmake  FindSDL3.cmake
include/serious/: RHI.hpp  Utils.hpp  VulkanRHI.hpp  VulkanUtils.hpp
include/serious/geo/: StaticMesh.hpp
include/serious/graphics/: Camera.hpp  DescriptorSet.hpp  Objects.hpp  RHI.hpp
include/serious/graphics/vulkan/: Vertex.hpp  VulkanCommand.hpp  VulkanDescriptor.hpp  VulkanDevice.hpp  VulkanObjects.hpp  VulkanPipeline.hpp  VulkanRHI.hpp  VulkanSwapchain.hpp  VulkanUtils.hpp
include/serious/io/: file.hpp  log.hpp  toml.hpp
include/serious/vulkan/: Vertex.hpp  VulkanBuffer.hpp  VulkanCommand.hpp  VulkanContext.hpp  VulkanDevice.hpp  VulkanObjects.hpp  VulkanPipeline.hpp  VulkanRHI.hpp  VulkanRenderer.hpp  VulkanSwapchain.hpp  VulkanSyncs.hpp
sandbox/: CMakeLists.txt  application.hpp  sandbox.cpp
serious/: Application.hpp  Renderer.hpp  VulkanCommand.hpp  VulkanContext.hpp  VulkanDevice.hpp  VulkanPass.hpp  VulkanPipeline.hpp  VulkanSwapchain.hpp  VulkanSyncs.hpp  VulkanUtils.hpp  context.hpp  serious.hpp  tool.hpp
serious/vulkan/: Vertex.hpp  VulkanBuffer.hpp  VulkanCommand.hpp  VulkanDevice.hpp  VulkanPass.hpp  VulkanPipeline.hpp  VulkanRenderer.hpp  VulkanSwapchain.hpp  VulkanWindow.hpp
shaders/: grid.frag  grid.vert  shader.frag  shader.vert  test.frag  test.vert
src/: Application.cpp  Renderer.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanPass.cpp  VulkanPipeline.cpp  VulkanRHI.cpp  VulkanSwapchain.cpp  VulkanSyncs.cpp  VulkanUtils.cpp  command.cpp  context.cpp  device.cpp  instance.cpp  render_process.cpp  serious.cpp  swapchain.cpp  tool.cpp
src/graphics/: Camera.cpp
src/graphics/vulkan/: Vertex.cpp  VulkanCommand.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanRHI.cpp  VulkanSwapchain.cpp
src/io/: toml.cpp
src/vulkan/: Vertex.cpp  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanPass.cpp  VulkanPipeline.cpp  VulkanRHI.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp  VulkanSyncs.cpp  VulkanWindow.cpp
srcpp/: command.cpp  render_process.cpp
